{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 261,
  "lineage": "3657f5bf-2922-c17a-a147-1e1f64052967",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "hello_world_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/hello-world-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/ssl-redirect": "false",
                  "nginx.ingress.kubernetes.io/use-regex": "true"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "hello-world-ingress",
                "namespace": "default",
                "resource_version": "98248599",
                "uid": "c64958c9-7bf5-427f-a905-82e77a4b47df"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "client-auth",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/auth",
                            "path_type": "Prefix"
                          },
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "sarvam-authoring-ui",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "4.255.109.187"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "hello_world_ingress_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/hello-world-ingress-2",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/$1",
                  "nginx.ingress.kubernetes.io/ssl-redirect": "false",
                  "nginx.ingress.kubernetes.io/use-regex": "true"
                },
                "generate_name": "",
                "generation": 3,
                "labels": {},
                "name": "hello-world-ingress-2",
                "namespace": "default",
                "resource_version": "98310538",
                "uid": "d0b9e1e0-c21d-4fbd-837a-b1b2be8ca90f"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "sarvam-app-runtime-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/api/app-runtime/(.*)",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "4.255.109.187"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.auth_service",
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "id": "default/auth-service",
            "metadata": [
              {
                "generation": 0,
                "name": "auth-service",
                "namespace": "default",
                "resource_version": "97532358",
                "uid": "f382d63e-431e-44c3-81bc-d51327ee3339"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.0.105.12",
                "cluster_ips": [
                  "10.0.105.12"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 30401,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "auth-service"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "ip": "4.157.172.73"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    },
    {
      "module": "module.client_auth",
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "id": "default/client-auth",
            "metadata": [
              {
                "generation": 0,
                "name": "client-auth",
                "namespace": "default",
                "resource_version": "98247374",
                "uid": "872360a6-3a8b-4a4d-a6ca-31a4438be019"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.0.2.98",
                "cluster_ips": [
                  "10.0.2.98"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "3000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "client-auth"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    },
    {
      "module": "module.knowledge_base_authoring_service",
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "id": "default/knowledge-base-authoring-service",
            "metadata": [
              {
                "generation": 0,
                "name": "knowledge-base-authoring-service",
                "namespace": "default",
                "resource_version": "97793288",
                "uid": "6ddd5bc0-96f6-480e-8a4a-0403039d11cc"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.0.20.248",
                "cluster_ips": [
                  "10.0.20.248"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 31941,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "knowledge-base-authoring-service"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "ip": "48.216.162.2"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    },
    {
      "module": "module.knowledge_base_runtime_service",
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "id": "default/knowledge-base-service",
            "metadata": [
              {
                "generation": 0,
                "name": "knowledge-base-service",
                "namespace": "default",
                "resource_version": "97531988",
                "uid": "34b075c2-c14c-4a54-932b-24de6b430783"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.0.223.146",
                "cluster_ips": [
                  "10.0.223.146"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "knowledge-base-service"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    },
    {
      "module": "module.org_service",
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "id": "default/org-service",
            "metadata": [
              {
                "generation": 0,
                "name": "org-service",
                "namespace": "default",
                "resource_version": "97532083",
                "uid": "b74bbf6e-b629-47f0-be69-92e572831b8c"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.0.205.216",
                "cluster_ips": [
                  "10.0.205.216"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "org-service"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    },
    {
      "module": "module.sarvam_app_authoring_runtime_service",
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "id": "default/sarvam-app-authoring-runtime-service",
            "metadata": [
              {
                "generation": 0,
                "name": "sarvam-app-authoring-runtime-service",
                "namespace": "default",
                "resource_version": "98336645",
                "uid": "9626ec78-ff01-4336-aaf5-03beb550c587"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.0.143.37",
                "cluster_ips": [
                  "10.0.143.37"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 32621,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "sarvam-app-authoring-runtime-service"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "ip": "4.255.122.253"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    },
    {
      "module": "module.sarvam_app_authoring_service",
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "id": "default/sarvam-app-authoring-service",
            "metadata": [
              {
                "generation": 0,
                "name": "sarvam-app-authoring-service",
                "namespace": "default",
                "resource_version": "98293000",
                "uid": "db86c302-1984-4c4d-8487-777e75ee3e45"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.0.226.208",
                "cluster_ips": [
                  "10.0.226.208"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 32440,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "sarvam-app-authoring-service"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "ip": "52.191.224.88"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    },
    {
      "module": "module.sarvam_app_runtime_svc",
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "id": "default/sarvam-app-runtime-service",
            "metadata": [
              {
                "generation": 0,
                "name": "sarvam-app-runtime-service",
                "namespace": "default",
                "resource_version": "97532307",
                "uid": "0ba31fb4-eafc-4c73-b4ba-c560ed1950fb"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.0.87.146",
                "cluster_ips": [
                  "10.0.87.146"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 31580,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "sarvam-app-runtime-service"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "ip": "4.157.171.249"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    },
    {
      "module": "module.sarvam_authoring_ui",
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "id": "default/sarvam-authoring-ui",
            "metadata": [
              {
                "generation": 0,
                "name": "sarvam-authoring-ui",
                "namespace": "default",
                "resource_version": "98247512",
                "uid": "1b9cfcab-f598-470a-a385-05a9282b44b4"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.0.254.0",
                "cluster_ips": [
                  "10.0.254.0"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "3000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "sarvam-authoring-ui"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    },
    {
      "module": "module.sarvam_v2v_web_ui",
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "id": "default/sarvam-v2v-web-ui",
            "metadata": [
              {
                "generation": 0,
                "name": "sarvam-v2v-web-ui",
                "namespace": "default",
                "resource_version": "97544891",
                "uid": "b386c85a-b60b-4ee9-93cb-3ba1d3a33560"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.0.214.73",
                "cluster_ips": [
                  "10.0.214.73"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 32334,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "3000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "sarvam-v2v-web-ui"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "ip": "4.157.157.99"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    },
    {
      "module": "module.sarvam_vad_service",
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "id": "default/sarvam-vad-service",
            "metadata": [
              {
                "generation": 0,
                "name": "sarvam-vad-service",
                "namespace": "default",
                "resource_version": "97532131",
                "uid": "52178a8a-49b9-40ef-bb50-ec508ff18c19"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.0.10.243",
                "cluster_ips": [
                  "10.0.10.243"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "grpc",
                    "node_port": 0,
                    "port": 50051,
                    "protocol": "TCP",
                    "target_port": "50051"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "sarvam-vad-service"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    }
  ]
}